--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: php
-sudo: trues
+
 php:
   - 7.0
   - 7.1
@@ -7,10 +7,19 @@ php:
 
 matrix:
   fast_finish: true
+  exclude:
+    - php: 7.0
+      env: LARAVEL_VERSION=5.6.*
 
-install:
+before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction
+  - if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "laravel/laravel:${LARAVEL_VERSION}" --no-update; fi;
+  - composer update
 
 script:
   - vendor/bin/phpunit
+
+env:
+  - LARAVEL_VERSION=5.5.*
+  - LARAVEL_VERSION=5.6.*
