--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         }
     ],
     "require": {
-        "illuminate/support": "5.5.*",
-        "illuminate/http": "5.5.*",
-        "illuminate/contracts": "5.5.*"
+        "illuminate/support": "5.5.*|5.6.*",
+        "illuminate/http": "5.5.*|5.6.*",
+        "illuminate/contracts": "5.5.*|5.6.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
-        "orchestra/testbench": "~3.5",
+        "phpunit/phpunit": "~6.0|~7.0",
+        "orchestra/testbench": "~3.5|~3.6",
         "fzaninotto/faker": "~1.4",
         "ramsey/uuid": "^3.7"
     },
