--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: php
 
 php:
+  - 7.0
   - 7.1
   - 7.2
 
 matrix:
   fast_finish: true
+  exclude:
+    - php: 7.0
+      env: LARAVEL_VERSION=5.6.*
 
 before_script:
   - travis_retry composer self-update
@@ -16,5 +20,5 @@ before_script:
 script:
   - vendor/bin/phpunit
 
-env:
+  - LARAVEL_VERSION=5.5.*
   - LARAVEL_VERSION=5.6.*
