--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         }
     ],
     "require": {
-        "illuminate/support": "5.6.*",
-        "illuminate/http": "5.6.*",
-        "illuminate/contracts": "5.6.*"
+        "illuminate/support": "5.5.*|5.6.*",
+        "illuminate/http": "5.5.*|5.6.*",
+        "illuminate/contracts": "5.5.*|5.6.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
-        "orchestra/testbench": "~3.6",
+        "orchestra/testbench": "3.5.*|3.6.*",
         "fzaninotto/faker": "~1.4",
         "ramsey/uuid": "^3.7"
     },
