--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/contracts": "5.5.*|5.6.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0",
+        "phpunit/phpunit": "6.0.*|7.0.*",
         "orchestra/testbench": "3.5.*|3.6.*",
         "fzaninotto/faker": "~1.4",
         "ramsey/uuid": "^3.7"
