Fix facade name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
               "Code16\\Responder\\ResponderServiceProvider"
           ],
           "aliases": {
-            "Responder": "Code16\\Responder\\Facade"
+            "Responder": "Code16\\Responder\\Responder"
           }
       }
     }
