--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         }
     ],
     "require": {
-        "illuminate/support": "5.5.*|5.6.*",
-        "illuminate/http": "5.5.*|5.6.*",
-        "illuminate/contracts": "5.5.*|5.6.*"
+        "illuminate/support": "5.6.*",
+        "illuminate/http": "5.6.*",
+        "illuminate/contracts": "5.6.*"
     },
     "require-dev": {
         "phpunit/phpunit": "7.0.*",
