--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "7.0.*",
-        "orchestra/testbench": "3.6.*",
+        "orchestra/testbench": "3.6.*|3.7.*",
         "fzaninotto/faker": "~1.4",
         "ramsey/uuid": "^3.7"
     },
