--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,12 @@
         }
     ],
     "require": {
-        "illuminate/support": "5.6.*|5.7.*",
-        "illuminate/http": "5.6.*|5.7.*",
-        "illuminate/contracts": "5.6.*|5.7.*"
+        "illuminate/support": "5.6.*|5.7.*|5.8.*",
+        "illuminate/http": "5.6.*|5.7.*|5.8.*",
+        "illuminate/contracts": "5.6.*|5.7.*|5.8.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.0.*",
-        "orchestra/testbench": "3.6.*|3.7.*",
+        "orchestra/testbench": "3.8.*",
         "fzaninotto/faker": "~1.4",
         "ramsey/uuid": "^3.7"
     },
